# ACT

./: CHANGELOG.md  CMakeLists.txt  STRUCTURE.md  TODO.md  build.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  moderncard.cpp  moderncard.h  settingsdialog.cpp  settingsdialog.h  sidebar.cpp  sidebar.h
